--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/Slifer.png">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,600i&display=swap" rel="stylesheet">
+  <script src="https://use.fontawesome.com/7d9f5e7bac.js"></script>
 </head>
 <body>
   <app-root></app-root>
