--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/Slifer.png">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,600i&display=swap" rel="stylesheet">
-  <script src="https://use.fontawesome.com/7d9f5e7bac.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <app-root></app-root>
